fix: [IPET-1624] [PDP] [MOBILE] Long PDF descriptions of attachments do not fit

--- a/src/components/product-details/attachments/attachments.scss
+++ b/src/components/product-details/attachments/attachments.scss
@@ -71,6 +71,7 @@ $attachments_download-icon: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='
         font-weight: 700;
         display: block;
         width: 100%;
+        line-break: anywhere;
     }
 
     &__description {
